dnloads/cloudflared-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: dnloads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        command:
        - cloudflared
        - tunnel
        - --no-autoupdate
        - run
        - --token
        - <ENTER TOKEN>
