dnloads/bazarr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: dnloads #added
  labels:
    app: bazarr-ui
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/part-of: dnloads  
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll      
    keel.sh/pollSchedule: "@every 4h"
    keel.sh/approvals: "1"
    keel.sh/approvalDeadline: "720" 
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels: 
      app.kubernetes.io/name: bazarr
      app.kubernetes.io/part-of: dnloads

  template:
    metadata:
      labels:
        app: bazarr-ui
        app.kubernetes.io/name: bazarr
        app.kubernetes.io/part-of: dnloads
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: bazarr-data
          mountPath: /config
        - name: bazarr-fs02-media
          mountPath: /mnt/fs02-media  
        - name: bazarr-tnas01-media
          mountPath: /mnt/tnas01-media          
      nodeSelector:
        deployDnloads: active
      volumes:
        - name: "bazarr-data"
          persistentVolumeClaim:
            claimName: bazarr-data-pvc
        - name: bazarr-fs02-media
          nfs:
            server: 192.168.55.22
            path: /volume1/media
        - name: bazarr-tnas01-media
          nfs:
            server: 192.168.55.24
            path: /mnt/Raid01/media            

---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-ui
  namespace: dnloads
  labels:
    app: bazarr-ui
spec:
  selector:
    app: bazarr-ui
  ports:
  - port: 6767
    protocol: TCP
    targetPort: 6767
    name: web
