dnloads/sonarr-ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-web-ui
  namespace: dnloads
  
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`sonarr.home.arpa`) || Host(`ar-sonarr.crzynet.com`)
    kind: Rule
    services:
      - name: sonarr-ui
        port: 8989
