dnloads/syncthing-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-web-ui
  namespace: dnloads
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`syncthing01.home.arpa`) || Host(`ar-syncthing.crzynet.com`)
    kind: Rule
    services:
      - name: syncthing
        port: 8384 

---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-protocol
  namespace: dnloads
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
    - port: 32222
      nodePort: 32222
      protocol: TCP
      name: syncthing-tcp
    - port: 32222
      nodePort: 32222
      protocol: UDP
      name: syncthing-udp
