dnloads/xteve-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: xteve-web-ui
  namespace: dnloads
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`xteve.home.arpa`)
    kind: Rule
    services:
      - name: xteve
        port: 34400

---
apiVersion: v1
kind: Service
metadata:
  name: xteve-protocol
  namespace: dnloads
spec:
  type: NodePort
  selector:
    app: xteve
  ports:
    - port: 9000
      nodePort: 31900
      protocol: TCP
      name: xteve-tcp
#    - port: 32222
#      nodePort: 32222
#      protocol: UDP
#      name: syncthing-udp
